k8s/dev/simple-api-svc-external.yaml
apiVersion: v1
kind: Service

metadata:
  name: simple-api-svc
  namespace: api
spec:
  type: ExternalName
  externalName: kong.192.168.41.28.sslip.io
