k8s/dev/simple-api.yaml
apiVersion: v1
kind: Service

metadata:
  name: simple-api-svc
  namespace: api
spec:
  selector:
    app: simple-api
    version: v1
  
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-api-deploy
  namespace: api    
  
  labels:
    app: simple-api
    version: v1
    
   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-api
      version: v1
  template:
    metadata:
      
      labels:
        app: simple-api 
        version: v1    
      

    spec:
      containers:
        - name: simple-api
          image: saturn203/simple-api
          ports:
          - name: http
            containerPort: 8080
