k8s/dev/ingress-simple-api.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simple-api-gateway
  namespace: api 
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "dev.simple-api.127.0.0.1.sslip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-api-gateway-vs
  namespace: api 
spec:
  hosts:
  - "dev.simple-api.127.0.0.1.sslip.io"
  gateways:
  - simple-api-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: simple-api-svc
        port:
          number: 8080
