k8s/dev/k8s-ingress-simple-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-api-ingress
  namespace: api
spec:
  ingressClassName: "nginx"
  rules:
  - host: "simple-api.192.168.41.22.sslip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-api-svc
            port:
              number: 8080
