k8s/dev/simple-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-vs
  namespace: api 
spec:
  hosts:
  - "*.api.svc.cluster.local"

  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: simple-api-svc
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api2
    route:
    - destination:
        host: simple-api2-svc
        port:
          number: 8080
